--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=LAPTOP-NUB8M13U\\SQLEXPRESS;Initial Catalog=adhd_analyzer;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    "DefaultConnection": "Server=tcp:adhd-anaylzer-admindbserver.database.windows.net,1433;Initial Catalog=ADHD_anaylzer_Admin_db;Persist Security Info=False;User ID=adhd_analyzer_user;Password=RoniSDapp&tab;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Logging": {
     "LogLevel": {
